Accessibility: fix dark mode contrast

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -13,7 +13,7 @@ $primary-color-darker: darken($primary-color, 25%) !default;
 $primary-color-dark:    #e46b34;
 $text-color-dark:       #E3E8FF !default;
 $background-color-dark: rgba(13, 16, 40, 1);
-$code-snippet-background-color-dark: rgba(54, 66, 77, 0.34);
+$code-snippet-background-color-dark: #292A2F;
 $code-snippet-box-shadow-dark: transparent;
 $primary-color-dark-lighter: lighten($primary-color-dark, 40%) !default;
 $primary-color-dark-darker: darken($primary-color-dark, 25%) !default;
